removed figure tag to prevent image overlapping nav bar

--- a/assets/css/eat-in.css
+++ b/assets/css/eat-in.css
@@ -135,6 +135,10 @@ div.subtitle {
     position: static;
 } 
 
+figure.is-4by3 img {
+    position: static;
+}
+
 /* .image {
     position: static;
 } */
